# llvm-disas

./: .ci.yml  .gitignore  CMakeLists.txt  README.rst  assemble.cc  create_disasm.c  create_disasm.cpp  disasm_instruction.c  disasm_instruction.cpp  dispose.c  dispose.cpp  init.c  init.cpp  llvm-disas.h  llvm-init.hpp  llvm.h  llvm.hpp  main.c  main.cpp  make.sh  stub.c  stub.cpp  test.c  test.cpp
.ci/: windows.sh
llvm-patches/: 0001-Disassembler-treat-SoftFail-as-success.patch  0001-NFC-include-cstdint-string-prior-to-using-uint8_t-st.patch  0002-MCDisassembler-add-setting-condexec.patch  0002-Sparc-Fix-decoding-of-FLUSHrr-and-FLUSHri.patch  0003-MCDisassembler-add-setting-condexec-C-API.patch  0004-MSP430-fail-instead-of-unreachabling.patch
